--- a/build.gradle
+++ b/build.gradle
@@ -42,8 +42,7 @@ dependencies {
 
 idea {
     module {
-        scopes.PROVIDED.plus  += configurations.perfCompile
-        scopes.PROVIDED.minus += configurations.compile
+        scopes.PROVIDED.plus  += [ configurations.perfCompile ]
     }
 }
 
